@@ -1,4 +1,4 @@
-# Version control files and dirs.
+# Avoid version control files.
 \bRCS\b
 \bCVS\b
 \bSCCS\b
@@ -7,16 +7,14 @@
 \B\.git\b
 \B\.gitignore\b
 \b_darcs\b
+\B\.cvsignore$
 
-# Module::Build generated files and dirs.
-^Build$
-^Build\.bat$
-^_build/
+# Avoid VMS specific MakeMaker generated files
+\bDescrip.MMS$
+\bDESCRIP.MMS$
+\bdescrip.mms$
 
-# Module::Install included files.
-^inc/Module/Install
-
-# Makemaker generated files and dirs.
+# Avoid Makemaker generated and utility files.
 \bMANIFEST\.bak
 \bMakefile$
 \bblib/
@@ -25,16 +23,36 @@
 \bpm_to_blib$
 \bblibdirs\.ts$         # 6.18 through 6.25 generated this
 
-# Temp, old and emacs backup files.
+# Avoid Module::Build generated and utility files.
+\bBuild$
+\b_build/
+\bBuild.bat$
+\bBuild.COM$
+\bBUILD.COM$
+\bbuild.com$
+
+# Avoid temp and backup files.
 ~$
 \.old$
 \#$
 \b\.#
 \.bak$
 \.tmp$
+\.#
+\.rej$
 
-# Devel::Cover files.
+# Avoid OS-specific files/dirs
+# Mac OSX metadata
+\B\.DS_Store
+# Mac OSX SMB mount metadata files
+\B\._
+
+# Avoid Devel::Cover and Devel::CoverX::Covered files.
 \bcover_db\b
+\bcovered\b
+ 
+# Avoid MYMETA files
+^MYMETA\.
 
 # Test::Kwalitee cache files.
 ^Debian_CPANTS\.txt
